--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ nav {
     height: 12vh;
     color: white;
     justify-content: space-between;
-    align-items: center;
     border-bottom: 2px solid rgb(0, 255, 55);
     z-index: 2;
     display: flex;
@@ -453,6 +452,18 @@ nav h2   {
 
 
 @media(max-width:700px) {
+  
+    .header {
+        min-height: 40vh;
+      height: 40vh;
+        position: relative;
+        background-color: none;
+        background-image: linear-gradient(rgba(37, 38, 41, 0.7), rgba(29, 29, 31, 0.9)), url(images/Bg.jpg);
+        background-position: center;
+        background-size: cover;
+
+    }
+
     .row .aboutus p {font-size: 1rem;}
     .textbox {
         font-size: 1rem;
@@ -492,12 +503,15 @@ nav h2   {
 
 
 @media(orientation:portrait) {
-    .header {
+  .header {
+        min-height: 40vh;
+      height: 40vh;
+        position: relative;
         background-color: none;
-        background-image: linear-gradient(rgba(37, 38, 41, 0.2), rgba(29, 29, 31, 0.2)), url(images/Bg.jpg);
+        background-image: linear-gradient(rgba(37, 38, 41, 0.7), rgba(29, 29, 31, 0.9)), url(images/Bg.jpg);
         background-position: center;
         background-size: cover;
-         min-height: 40vh;
+
     }
 
     nav {
@@ -758,5 +772,16 @@ footer span {
     .textbox p {
         font-size: larger;
     }
+    .header {
+        min-height: 40vh;
+      height: 40vh;
+        position: relative;
+        background-color: none;
+        background-image: linear-gradient(rgba(37, 38, 41, 0.7), rgba(29, 29, 31, 0.9)), url(images/Bg.jpg);
+        background-position: center;
+        background-size: cover;
+
+    }
+
    
 }
